--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <p class="text-sm text-gray-300 mt-2">
         Repos remotos, pull requests y buenas prácticas.
       </p>
-      <a href="manual_github." target="_blank" 
+      <a href="manual_github.html" target="_blank" 
          class="btn-glow mt-4 inline-block text-sm px-6 py-2">
          📖 Ver Manual
       </a>
