--- a/semana1.html
+++ b/semana1.html
@@ -200,7 +200,7 @@ Presupuesto "1" *-- "many" Rubro
         <a href="index.html" class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105">
           ⬅️ Volver a Inicio
         </a>
-        <a href="https://github.com/Wikkl20/DDA_Semana1" target="_blank"
+        <a href="https://github.com/Wikkl20/Semana-1" target="_blank"
           class="px-6 py-3 bg-purple-700 text-white font-bold rounded-xl shadow-lg hover:bg-purple-400 hover:text-black transition transform hover:scale-105">
           🌐 Ver en GitHub
         </a>
